--- a/src/app/setup/containers/players-page/players-page.component.html
+++ b/src/app/setup/containers/players-page/players-page.component.html
@@ -1,9 +1,5 @@
-<mat-toolbar color="primary" class="mat-elevation-z4">
-  <span>Players</span>
-  <span class="spacer"></span>
-  <mat-icon>search</mat-icon>
-</mat-toolbar>
-<div class="container" [class.xsmall]="isXSmallDisplay$ | async">
+<mm-players-toolbar></mm-players-toolbar>
+<div class="container">
   <div class="no-content-container" *ngIf="!(hasPlayers$ | async)">
     <div class="no-content">
       <h1>No players</h1>
@@ -20,7 +16,7 @@
 <button
   mat-mini-fab
   *ngIf="useMiniFab$ | async"
-  class="add-button mini"
+  class="add-button"
   (click)="addPlayerClicked()"
 >
   <mat-icon>add</mat-icon>
