--- a/src/app/setup/components/players-toolbar/players-toolbar.component.html
+++ b/src/app/setup/components/players-toolbar/players-toolbar.component.html
@@ -3,9 +3,7 @@
     <button mat-icon-button (click)="searching = false">
       <mat-icon>arrow_back</mat-icon>
     </button>
-    <mat-form-field class="search-field">
-      <input matInput type="text" #searchInput>
-    </mat-form-field>
+    <mm-search-box (search)="onSearch($event)"></mm-search-box>
   </ng-container>
 
   <ng-container *ngIf="!searching">
