feat(shared): WIP search box.
- Fixing search box width.
- Disabling autocomplete; was doing weird things.

Issue #96

--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -3,6 +3,7 @@
     matInput
     type="search"
     autofocus
+    autocomplete="off"
     #searchBox
     (input)="doSearch()"
     (keyup)="doSearch()"
