feat(setup): WIP player filtering.
- Adding searched output to PlayersToolbar.
- Fiddling with filtering.

Issue #96

--- a/src/app/setup/containers/players-page/players-page.component.html
+++ b/src/app/setup/containers/players-page/players-page.component.html
@@ -1,4 +1,4 @@
-<mm-players-toolbar></mm-players-toolbar>
+<mm-players-toolbar (searched)=onSearch($event)></mm-players-toolbar>
 <div class="container">
   <div class="no-content-container" *ngIf="!(hasPlayers$ | async)">
     <div class="no-content">
