feat(setup): Improving search toggling.
- Changing events emitted by PlayersToolbar.
- Fixing issues with list retaining search results after closing search
bar and when reopening search bar.

Issue #96

--- a/src/app/setup/containers/players-page/players-page.component.html
+++ b/src/app/setup/containers/players-page/players-page.component.html
@@ -1,4 +1,7 @@
-<mm-players-toolbar (searched)=onSearch($event)></mm-players-toolbar>
+<mm-players-toolbar
+  (searchingChanged)="onSearchingChanged($event)"
+  (searchQueryChanged)="onSearchQueryChanged($event)"
+></mm-players-toolbar>
 <div class="container">
   <div class="no-content-container" *ngIf="!(hasPlayers$ | async)">
     <div class="no-content">
