feat(setup): Good start on StartEventForm.
Issue #96

--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -5,7 +5,9 @@
 <mat-sidenav-container>
   <mm-players-list [players]="players$ | async"></mm-players-list>
   <mat-sidenav position="end" #sidenav [fixedInViewport]="true">
-    blah blah
+    <mm-start-event-form
+      [recommendedTotalRounds]="recommendedTotalRounds$ | async"
+    ></mm-start-event-form>
   </mat-sidenav>
 
   <button
