--- a/src/app/setup/components/start-event-form/start-event-form.component.html
+++ b/src/app/setup/components/start-event-form/start-event-form.component.html
@@ -20,4 +20,11 @@
       >Draft Pods</mat-slide-toggle
     >
   </section>
+
+  <section class="spacer"></section>
+
+  <section>
+    <button mat-raised-button color="primary">Start</button>
+  </section>
+
 </form>
