--- a/src/app/setup/components/start-event-form/start-event-form.component.scss
+++ b/src/app/setup/components/start-event-form/start-event-form.component.scss
@@ -1,8 +1,25 @@
 form {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   padding: 16px;
 
   section {
     margin-bottom: 24px;
+
+    &.spacer {
+      flex: 1;
+    }
+
+    &:last-child {
+      display: flex;
+      justify-content: flex-end;
+      margin-bottom: 0;
+
+      button {
+        text-transform: uppercase;
+      }
+    }
 
     mat-radio-group {
       display: flex;
