feat(setup): Working on side sheet. - Adding eslint to dev dependencies. - Removing some unneeded global styles. - Creating SetupSideSheet component. - Fixing width of rounds field.
Issue #96

--- a/src/app/setup/components/start-event-form/start-event-form.component.html
+++ b/src/app/setup/components/start-event-form/start-event-form.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="startForm">
   <section>
-    <mat-form-field appearance="fill">
+    <mat-form-field appearance="fill" class="rounds-field">
       <mat-label>Rounds</mat-label>
       <input formControlName="rounds" matInput type="number" />
     </mat-form-field>
