feat(setup): WIP on side sheet.
Issue #96

--- a/src/app/setup/components/setup-side-sheet/setup-side-sheet.component.html
+++ b/src/app/setup/components/setup-side-sheet/setup-side-sheet.component.html
@@ -1,4 +1,4 @@
-<aside class="drawer">
+<aside class="mm-drawer" [class.mm-drawer--opened]="opened">
   <mm-start-event-form
     [recommendedTotalRounds]="recommendedTotalRounds"
   ></mm-start-event-form>
