--- a/src/app/setup/components/setup-side-sheet/setup-side-sheet.component.scss
+++ b/src/app/setup/components/setup-side-sheet/setup-side-sheet.component.scss
@@ -1,18 +1,39 @@
+@import 'theme-setup.scss';
+
+$background: map-get($mirror-match-theme, background);
+$foreground: map-get($mirror-match-theme, foreground);
+
 :host {
   display: block;
   top: 0;
   bottom: 0;
   min-width: 320px;
 
-  .drawer {
+  .mm-drawer {
     position: fixed;
     height: 100%;
     width: 320px;
-
+    background-color: mat-color($background, dialog);
+    border-left: solid 1px mat-color($foreground, divider);
     padding-top: 56px;
+  }
 
-    @media (min-width: 600px) {
-      padding-top: 64px;
+  :host-context(.large-toolbar) .drawer {
+    padding-top: 64px;
+  }
+}
+
+:host(.mm-side-sheet--modal) {
+  min-width: unset;
+
+  .mm-drawer {
+    display: none;
+    right: 0;
+    padding-top: unset;
+    z-index: 3;
+
+    &.mm-drawer--opened {
+      display: block;
     }
   }
 }
