feat(setup): WIP setup side sheet - Adding animations. - Adding scrim. - Added closing.

--- a/src/app/setup/components/setup-side-sheet/setup-side-sheet.component.html
+++ b/src/app/setup/components/setup-side-sheet/setup-side-sheet.component.html
@@ -1,5 +1,15 @@
-<aside class="mm-drawer" [class.mm-drawer--opened]="opened">
+<aside
+  class="mm-drawer"
+  [class]="{ 'mat-elevation-z16': opened, 'mm-drawer--opened': opened }"
+  [@openClose]="opened ? 'open' : 'close'"
+  (@openClose.done)="animationDoneListener($event)"
+>
   <mm-start-event-form
     [recommendedTotalRounds]="recommendedTotalRounds"
   ></mm-start-event-form>
 </aside>
+<div
+  class="mm-scrim"
+  [@showHideScrim]="opened ? 'show' : 'hide'"
+  (click)="close()"
+></div>
