feat(setup): WIP AddPlayerListItem - Creating new list item component for adding directly on the list.

--- a/src/app/setup/components/players-list/players-list.component.html
+++ b/src/app/setup/components/players-list/players-list.component.html
@@ -2,4 +2,6 @@
   <button mat-list-item *ngFor="let player of players" (click)="playerClicked.emit(player)">
     {{player.name}}
   </button>
+  <!-- <button mat-list-item class="mm-add-player-item">Add Player</button> -->
+  <mm-add-player-list-item></mm-add-player-list-item>
 </mat-action-list>
