feat(setup): Working on adding players. - Updating PlayerEffects to listen to correct addPlayer action. - Creating directive to focus form when opened. - Updating form to actually add players and close when unfocused.
Issue #96

--- a/src/app/setup/components/add-player-list-item/add-player-list-item.component.html
+++ b/src/app/setup/components/add-player-list-item/add-player-list-item.component.html
@@ -1,6 +1,6 @@
 <mat-list-item (click)="adding = true">
   <span *ngIf="!adding">+ Add Player</span>
-  <div *ngIf="adding">
-    <input matInput autofocus type="text" />
-  </div>
+  <form *ngIf="adding" [formGroup]="newPlayerForm" (ngSubmit)="onSubmit()">
+    <input matInput mmPlayerNameInput formControlName="name" type="text" (blur)="adding = false" />
+  </form>
 </mat-list-item>
