feat(core|setup|shared): Misc WIP
- Updating actions in PlayerEffects spec.
- Blocking adding duplicate player in the storage service.
- Working on AddPlayerListItem.
- Adding swipe to close on setup side sheet.

Issue #96

--- a/src/app/setup/components/add-player-list-item/add-player-list-item.component.html
+++ b/src/app/setup/components/add-player-list-item/add-player-list-item.component.html
@@ -1,6 +1,15 @@
 <mat-list-item (click)="adding = true">
   <span *ngIf="!adding">+ Add Player</span>
   <form *ngIf="adding" [formGroup]="newPlayerForm" (ngSubmit)="onSubmit()">
-    <input matInput mmPlayerNameInput formControlName="name" type="text" (blur)="adding = false" />
+    <mat-form-field>
+      <input
+        matInput
+        mmPlayerNameInput
+        formControlName="name"
+        type="text"
+        (blur)="onBlur()"
+      />
+      <mat-error *ngIf="newPlayerForm.get('name').invalid">{{getErrorMessage()}}</mat-error>
+    </mat-form-field>
   </form>
 </mat-list-item>
