--- a/src/app/setup/components/players-list/players-list.component.html
+++ b/src/app/setup/components/players-list/players-list.component.html
@@ -1,7 +1,14 @@
 <mat-action-list>
-  <button mat-list-item *ngFor="let player of players" (click)="playerClicked.emit(player)">
-    {{player.name}}
+  <button
+    mat-list-item
+    *ngFor="let player of players"
+    (click)="playerClicked.emit(player)"
+  >
+    {{ player.name }}
   </button>
   <!-- <button mat-list-item class="mm-add-player-item">Add Player</button> -->
-  <mm-add-player-list-item (addPlayer)="addPlayer.emit($event)"></mm-add-player-list-item>
+  <mm-add-player-list-item
+    [playerNames]="playerNames"
+    (addPlayer)="onAddPlayer($event)"
+  ></mm-add-player-list-item>
 </mat-action-list>
