feat(setup): Working on add player errors
- Switching to a snackbar for displaying validation errors on the input

Issue #96

--- a/src/app/setup/components/add-player-list-item/add-player-list-item.component.html
+++ b/src/app/setup/components/add-player-list-item/add-player-list-item.component.html
@@ -1,15 +1,13 @@
 <mat-list-item (click)="adding = true">
   <span *ngIf="!adding">+ Add Player</span>
   <form *ngIf="adding" [formGroup]="newPlayerForm" (ngSubmit)="onSubmit()">
-    <mat-form-field>
-      <input
-        matInput
-        mmPlayerNameInput
-        formControlName="name"
-        type="text"
-        (blur)="onBlur()"
-      />
-      <mat-error *ngIf="newPlayerForm.get('name').invalid">{{getErrorMessage()}}</mat-error>
-    </mat-form-field>
+    <input
+      autocomplete="given-name"
+      matInput
+      mmPlayerNameInput
+      formControlName="name"
+      type="text"
+      (blur)="onBlur()"
+    />
   </form>
 </mat-list-item>
