feat(setup): Continued work on themeing setup page
- Cleaning up Material theme files.
- Deleting SetupToolbarComponent. Scrapping that idea.
- Trying out some different colours.

Issue #96

--- a/src/app/setup/components/setup-side-sheet/setup-side-sheet.component.scss
+++ b/src/app/setup/components/setup-side-sheet/setup-side-sheet.component.scss
@@ -1,4 +1,4 @@
-@import 'theme-setup.scss';
+@import 'themes/theme';
 
 $background: map-get($mirror-match-theme, background);
 $foreground: map-get($mirror-match-theme, foreground);
