--- a/src/app/tournament/containers/setup-page/setup-page.component.scss
+++ b/src/app/tournament/containers/setup-page/setup-page.component.scss
@@ -1,5 +1,5 @@
-@import '~@angular/material/theming';
-@import 'theme-setup.scss';
+// @import '~@angular/material/theming';
+@import 'themes/theme';
 // .players-list {
 //   @media (min-width: 600px) {
 //     flex: 1 100%;
