--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 @import '~@angular/material/theming';
-@import 'theme-setup.scss';
+@import 'themes/theme';
 
 $primary: map-get($mirror-match-theme, primary);
 $background: map-get($mirror-match-theme, background);
