--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,8 @@
-@import 'abstracts/variables';
+// @import 'abstracts/variables';
 
 @import 'base/reset';
+
+@import 'themes/theme';
+
+@include mat-core();
+@include angular-material-theme($mirror-match-theme);
