--- a/src/app/setup/components/add-player-list-item/add-player-list-item.component.html
+++ b/src/app/setup/components/add-player-list-item/add-player-list-item.component.html
@@ -1,4 +1,4 @@
-<mat-list-item (click)="adding = true">
+<mat-list-item [disableRipple]="true" (click)="adding = true">
   <span *ngIf="!adding">+ Add Player</span>
   <form *ngIf="adding" [formGroup]="newPlayerForm" (ngSubmit)="onSubmit()">
     <input
