test(setup): Fixing small error in template.
Issue #96

--- a/src/app/setup/components/players-list/players-list.component.html
+++ b/src/app/setup/components/players-list/players-list.component.html
@@ -5,7 +5,7 @@
   </button>
   <button
     mat-list-item
-    *ngFor="let player of players.reverse()"
+    *ngFor="let player of players?.reverse()"
     (click)="playerClicked.emit(player)"
   >
     {{ player.name }}
