--- a/src/app/setup/containers/setup-page/setup-page.component.html
+++ b/src/app/setup/containers/setup-page/setup-page.component.html
@@ -6,7 +6,8 @@
   <div class="content-container">
     <mm-players-list
       [players]="players$ | async"
-      (addPlayer)="onAddPlayer($event)"
+      (addPlayer)="onAddPlayer()"
+      (updatePlayer)="onUpdatePlayer($event)"
     ></mm-players-list>
   </div>
 
