feat(setup): Continued work on players list.
- Creating an autofocus directive to focus the name input when clicked.
- Selected player handling in the list itself.
- Cleaning up a bunch of old code.

Issue #96

--- a/src/app/setup/components/players-list/players-list.component.html
+++ b/src/app/setup/components/players-list/players-list.component.html
@@ -5,20 +5,9 @@
   </mat-list-item>
   <mm-player-list-item
     *ngFor="let player of players?.reverse()"
+    [isEditing]="player.id === selectedPlayer?.id"
     [player]="player"
+    (click)="selectedPlayer = player"
     (updatePlayer)="updatePlayer.emit($event)"
   ></mm-player-list-item>
-  <!-- <button
-    mat-list-item
-    *ngFor="let player of players?.reverse()"
-    (click)="playerClicked.emit(player)"
-  >
-    {{ player.name }}
-  </button>
-  <button mat-list-item class="mm-add-player-item">Add Player</button>
-  <mm-add-player-list-item
-    [playerNames]="playerNames"
-    (addPlayer)="onAddPlayer($event)"
-  ></mm-add-player-list-item>
-  -->
 </mat-list>
