--- a/src/app/setup/components/player-list-item/player-list-item.component.html
+++ b/src/app/setup/components/player-list-item/player-list-item.component.html
@@ -1,7 +1,7 @@
-<mat-list-item (click)="edit()">
+<mat-list-item>
   <!-- {{ player.name }} -->
-  <span [class.hidden]="isEditing">{{ player.name }}!!!</span>
-  <form [class.hidden]="!isEditing" [formGroup]="playerForm" (ngSubmit)="submit()">
-    <input matInput autocomplete="off" formControlName="name" type="text" (blur)="submit()" />
+  <span *ngIf="!isEditing">{{ player.name }}!!!</span>
+  <form *ngIf="isEditing" [formGroup]="playerForm" (ngSubmit)="submit()">
+    <input matInput mmAutofocus autocomplete="off" formControlName="name" type="text" (blur)="submit()" />
   </form>
 </mat-list-item>
