--- a/src/sass/themes/_theme.scss
+++ b/src/sass/themes/_theme.scss
@@ -1,20 +1,31 @@
 @import '~@angular/material/theming';
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$mirror-match-primary: mat-palette($mat-blue-grey);
-$mirror-match-accent: mat-palette($mat-blue, A200, A100, A400);
+$mirror-match-primary: mat-palette($mat-blue);
+$mirror-match-accent:  mat-palette($mat-indigo, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$mirror-match-warn: mat-palette($mat-red);
+$mirror-match-warn:    mat-palette($mat-red);
 
-// Create the theme object (a Sass map containing all of the palettes).
-// $mirror-match-theme: mat-light-theme($mirror-match-primary, $mirror-match-accent, $mirror-match-warn);
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as `color` or `typography`.
 $mirror-match-theme: mat-light-theme((
   color: (
     primary: $mirror-match-primary,
     accent: $mirror-match-accent,
-    warn: $mirror-match-warn
+    warn: $mirror-match-warn,
   )
 ));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($mirror-match-theme);
