--- a/src/app/setup/pages/setup-page/setup-page.component.html
+++ b/src/app/setup/pages/setup-page/setup-page.component.html
@@ -2,4 +2,6 @@
   <span>Mirror Match</span>
 </mat-toolbar>
 
-<mm-setup-footer class="footer"></mm-setup-footer>
+<mm-players-list></mm-players-list>
+
+<mm-setup-footer class="footer mat-elevation-z8"></mm-setup-footer>
