feat(setup): Working on setup page.
- Adding players to the players list.
- Converting bottom bar icons to buttons.

Issue #96

--- a/src/app/setup/organisms/players-list/players-list.component.html
+++ b/src/app/setup/organisms/players-list/players-list.component.html
@@ -1,1 +1,5 @@
-<p>players-list works!</p>
+<mat-action-list>
+  <button mat-list-item *ngFor="let player of players?.reverse()">
+    {{ player.name }}
+  </button>
+</mat-action-list>
