--- a/src/app/setup/pages/setup-page/setup-page.component.html
+++ b/src/app/setup/pages/setup-page/setup-page.component.html
@@ -1,6 +1,4 @@
-<mat-toolbar color="primary" class="mat-elevation-z4">
-  <span>Mirror Match</span>
-</mat-toolbar>
+<mm-setup-header class="header mat-elevation-z4"></mm-setup-header>
 
 <mm-players-list
   [players]="players$ | async"
