feat(setup): Hooking up delete all players.
- Creating new actions.
- Creating new effect.
- Updating reducer.
- Updating storage service.
- Hooked every up to the button.
- Created Alert Dialog component.
- Updating some test files.

Issue #96

--- a/src/app/setup/organisms/setup-footer/setup-footer.component.html
+++ b/src/app/setup/organisms/setup-footer/setup-footer.component.html
@@ -1,5 +1,9 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button aria-label="Delete all players button">
+  <button
+    mat-icon-button
+    aria-label="Delete all players button"
+    (click)="deleteAllClicked()"
+  >
     <mat-icon>delete</mat-icon>
   </button>
   <span class="spacer"></span>
