--- a/src/app/setup/pages/setup-page/setup-page.component.html
+++ b/src/app/setup/pages/setup-page/setup-page.component.html
@@ -5,4 +5,7 @@
   class="players-list"
 ></mm-players-list>
 
-<mm-setup-footer class="footer mat-elevation-z8"></mm-setup-footer>
+<mm-setup-footer
+  class="footer mat-elevation-z8"
+  (deleteAll)="onDeleteAll()"
+></mm-setup-footer>
