feat(setup): Working on add player in new setup.
- Renamed old player sheet to not use it by accident.
- Created new player sheet.
- Hooked up new sheet, just prints the name.

Issue #96

--- a/src/app/setup/organisms/setup-footer/setup-footer.component.html
+++ b/src/app/setup/organisms/setup-footer/setup-footer.component.html
@@ -11,6 +11,12 @@
     <mat-icon>done</mat-icon>
   </button>
 </mat-toolbar>
-<button mat-fab aria-label="Add a player button" class="fab">
+
+<button
+  mat-fab
+  aria-label="Add a player button"
+  class="fab"
+  (click)="addClicked()"
+>
   <mat-icon>add</mat-icon>
 </button>
