feat(setup): Chaning new player behaviour.
- New player sheet min height to cover the bottom bar.
- Bottom bar doesn't hide anymore.

Issue #96

--- a/src/app/setup/organisms/new-player-sheet/new-player-sheet.component.scss
+++ b/src/app/setup/organisms/new-player-sheet/new-player-sheet.component.scss
@@ -1,5 +1,17 @@
+@import '~@angular/material/theming';
+@import 'abstracts/variables';
+
+@mixin min-height($toolbar-height) {
+  min-height: $toolbar-height + $mat-fab-size / 2;
+}
+
 :host {
   display: flex;
+  @include min-height($mat-toolbar-height-desktop);
+
+  @media ($mat-xsmall) {
+    @include min-height($mat-toolbar-height-mobile);
+  }
 
   .add-button {
     text-transform: uppercase;
