--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,13 +1,1 @@
-/// Colours
-$primary: #1976d2;
-$primary-variant: #004ba0;
-$secondary: #546e7a;
-$secondary-variant: #29434e;
-$background: #ffffff;
-$surface: #ffffff;
-$error: #b00020;
-$on-primary: #ffffff;
-$on-secondary: #ffffff;
-$on-background: #000000;
-$on-surface: #000000;
-$on-error: #ffffff;
+$mat-fab-size: 56px;
